--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div style=“padding:20px”>
-<embed type=“application/pdf” src=“plrzd.pdf” style=“width:100%; height:620px”>
+<embed type=“application/pdf” src=“https://github.com/plrzd/plrzd.github.io/blob/master/plrzd.pdf” style=“width:100%; height:620px”>
 </embed>
 </div>
 </body>
