--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-
 <html>
- 
-<head>
-<title> embed test </title>
-</head>
-<body>
-<div style=“padding:20px”>
-<embed type=“application/pdf” src=“https://github.com/plrzd/plrzd.github.io/blob/master/plrzd.pdf” style=“width:100%; height:620px”>
-</embed>
-</div>
-</body>
+  <head>
+    <title>Title of the document</title>
+  </head>
+  <body>
+    <h1>PDF Example with iframe</h1>
+    <iframe src="plrzd.github.io/blob/master/plrzd.pdf" width="100%" height="500px">
+    </iframe>
+  </body>
 </html>
