--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>PDF Example with iframe</h1>
-    <iframe src="https://plrzd.github.io/plrzd.pdf" width="100%" height="500px">
+    <iframe src="/plrzd.pdf" width="100%" height="500px">
     </iframe>
   </body>
 </html>
